@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2009-02-24"
+#define RUBY_RELEASE_DATE "2009-02-25"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20090224
-#define RUBY_PATCHLEVEL 141
+#define RUBY_RELEASE_CODE 20090225
+#define RUBY_PATCHLEVEL 142
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2009
 #define RUBY_RELEASE_MONTH 2
-#define RUBY_RELEASE_DAY 24
+#define RUBY_RELEASE_DAY 25
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
